TFP-4475 Gjøre test tydeligere